<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/materialsFragment"
        android:icon="@drawable/ic_material"
        android:title="@string/materials" />
    <item
        android:id="@+id/studyGroupsFragment"
        android:icon="@drawable/ic_group"
        android:title="@string/study_groups" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
