<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="ipvc.tp.devhive.presentation.ui.main.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/materialsFragment"
        android:name="ipvc.tp.devhive.presentation.ui.main.material.MaterialsFragment"
        android:label="@string/materials"
        tools:layout="@layout/fragment_materials" />

    <fragment
        android:id="@+id/studyGroupsFragment"
        android:name="ipvc.tp.devhive.presentation.ui.main.studygroup.StudyGroupsFragment"
        android:label="@string/study_groups"
        tools:layout="@layout/fragment_study_groups" />

    <fragment
        android:id="@+id/chatFragment"
        android:name="ipvc.tp.devhive.presentation.ui.main.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="ipvc.tp.devhive.presentation.ui.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
